--- a/templates/board_list.html
+++ b/templates/board_list.html
@@ -8,6 +8,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">    <link rel="stylesheet" href="/static/css/font.css">
     <link rel="stylesheet" href="/static/css/font.css">
+    <meta property="og:title" content="오메추!" />
+    <meta property="og:description" content="더 이상 뭐 먹을지 고민하지 마세요!" />
+    <meta property="og:image" content="/static/images/ogimg.png" />
     <link rel="shortcut icon" href="/static/images/favicon.ico">
     <script src="/static/js/navbar.js" defer></script>
     <script src="/static/js/board_list.js" defer></script>
