--- a/templates/change_pw.html
+++ b/templates/change_pw.html
@@ -2,6 +2,9 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="오메추!" />
+    <meta property="og:description" content="더 이상 뭐 먹을지 고민하지 마세요!" />
+    <meta property="og:image" content="/static/images/ogimg.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
