--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="오메추!" />
+    <meta property="og:description" content="더 이상 뭐 먹을지 고민하지 마세요!" />
+    <meta property="og:image" content="/static/images/ogimg.png" />
     <title>오메추!</title>
     <link rel="shortcut icon" href="/static/images/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -23,20 +26,16 @@
             <h2 class="main_text">더 이상 뭐 먹을지 고민하지 말자!
             </h2>
           </div>
-          <div class="main_box_inline flex-start">
+          </div>
+          </div>
+          <div class="main_box_inline">
             <div class="main-box_1">
-          <a href="/roulette"><img class="oneimg"src="/static/images/index1.png"></a>
+          <a href="/roulette"><img class="textimg"src="/static/images/001.png"></a>
         </div>
-          </div>
-        <div class="main_box_inline flex-end">
         <div class="main-box_2">
-          <a href="/test"><img class="twoimg" src="/static/images/index2.png"></a>
+          <a href="/test"><img class="textimg"src="/static/images/002.png"></a>
         </div>
-      </div>
           </div>
-          
-        </div>
-      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/static/js/index.js"></script>
 </body>
