--- a/templates/ladder.html
+++ b/templates/ladder.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="오메추!" />
+    <meta property="og:description" content="더 이상 뭐 먹을지 고민하지 마세요!" />
+    <meta property="og:image" content="/static/images/ogimg.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -39,8 +42,8 @@
     </div>
     <div id="makeRl" style="display: none">
       <div class="ladder_spin">
-        <h2>메뉴 추천으로 돌아가기</h2>
-        <button id="r_b" class="main_btn" onclick="makeRl()">버튼</button>
+        <h2>나만의 룰렛</h2>
+        <button id="r_b" class="main_btn" onclick="makeRl()">메뉴 리스트 편집하기</button>
       </div>
       <div class="roulette">
         <canvas id="rlc" width="380" height='380'></canvas>  
