--- a/templates/test.html
+++ b/templates/test.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="오메추!" />
+    <meta property="og:description" content="더 이상 뭐 먹을지 고민하지 마세요!" />
+    <meta property="og:image" content="/static/images/ogimg.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="/static/css/test.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -63,12 +66,20 @@
             <button class="all_menu" onclick="$('.menulist').toggle();">모든 메뉴 보기</button>
             <div id ="menulist" class="menulist" style="display: none"></div>
             <button class="all_menu mt-3" onclick="location.href='/test'">테스트 다시하기</button>
+            <div class="copyclass">
+                <a class="text-center" href="#" onclick="clip(); return false;"><img src="/static/images/share_btn.svg" alt=""></a>
+                <a id="kakao-link-btn" href="javascript:kakaoShare()" class="ml-3"><img src="/static/images/kakao.svg"/></a>
+                
+            </div>
+       
+
         </article>
         <input type="hidden" id ="q1" value="0">
         <input type="hidden" id ="q2" value="0">
         <input type="hidden" id ="q3" value="0">
         <input type="hidden" id ="q4" value="0">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script type="text/javascript" src="/static/js/test.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
